sql/sql_parse.cc
@@ -5656,6 +5656,11 @@ void mysql_parse(THD *thd, const char *inBuf, uint length,
               (thd->query_length= (ulong)(*found_semicolon - thd->query)))
             thd->query_length--;
           /* Actually execute the query */
+          if (*found_semicolon)
+          {
+            lex->safe_to_cache_query= 0;
+            thd->server_status|= SERVER_MORE_RESULTS_EXISTS;
+          }
           lex->set_trg_event_type_for_tables();
           mysql_execute_command(thd);
 	}
@@ -7448,6 +7453,7 @@ bool parse_sql(THD *thd,
 
   /* Set Lex_input_stream. */
 
+  lip->set_echo(TRUE);
   thd->m_lip= lip;
 
   /* Parse the query. */
